@@ -1,6 +1,15 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.647 2006/05/09 21:17:46 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.648 2006/05/16 04:01:43 agaffney Exp $
+
+  15 May 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/templates/x86ArchitectureTemplate.py:
+  add strict_start and strict_end parameters to _add_partition()
+  add _find_current_minor_for_part() function to help with resizing
+  fix logical/extended logic in _partition_delete_step()
+  in _partition_resize_step(), delete, recreate at new size, resize, delete
+  call resize2fs with no size argument so it fills entire partition
+  more logging
 
   9 May 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIStorageDevice.py:
